--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angularfire2": "^2.0.0-beta.8",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "firebase": "^3.7.5",
     "rxjs": "^5.0.1",
