--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular2-froala-wysiwyg": "^2.5.1-2",
     "angularfire2": "^2.0.0-beta.8",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
